--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,5 +1,6 @@
 <%- include("partials/header") %>
 
+
     <div class="container">
         <div class="jumbotron">
             <h1>Categories</h1>
@@ -8,7 +9,7 @@
             </div>
         </div>
 
-        <% if (foundData.length> 0) { %>
+        <% if (foundData.results.length> 0) { %>
             <div class="container-fluid">
                 <table class="table-dark bg-dark rounded my-3">
                     <thead>
@@ -19,35 +20,60 @@
                         <td class="h3">Delete</td>
                     </thead>
                     <tbody>
-                        <% for(var i=0;i<foundData.length;i++){%>
+                        <% for(var i=0;i<foundData.results.length;i++){%>
                             <tr>
 
                                 <td>
-                                    <%=foundData[i]._id%>
+                                    <%=foundData.results[i]._id%>
                                 </td>
-                                <td> <a href="/category/<%=foundData[i]._id%>">
-                                        <%=foundData[i].name%>
+                                <td> <a href="/category/<%=foundData.results[i]._id%>">
+                                        <%=foundData.results[i].name%>
                                     </a></td>
 
-                                <td> <a href="/category/<%=foundData[i]._id%>" class="btn text-center btn-primary ">Add
+                                <td> <a href="/category/<%=foundData.results[i]._id%>"
+                                        class="btn text-center btn-primary ">Add
                                         products</a></td>
                                 <td>
-                                    <form action="/category/<%=foundData[i]._id%>/edit" method="GET">
+                                    <form action="/category/<%=foundData.results[i]._id%>/edit" method="GET">
                                         <button class="btn text-center btn-success">update</button>
                                     </form>
                                 </td>
 
                                 <td>
-                                    <form action="/category/<%=foundData[i]._id%>?_method=delete" method="POST">
+                                    <form action="/category/<%=foundData.results[i]._id%>?_method=delete" method="POST">
                                         <button class="btn text-center btn-danger">delete</button>
                                     </form>
                                     <%}%>
                     </tbody>
                 </table>
 
-                <% }else{ %>
-                    <h2 class="my-4">No Category right now</h2>
-                    <% } %>
+                <% if (page==1) {%>
+                    <button disabled class="btn btn-primary rounded-circle mx-3">&#8249;</button>
+                    <%}else{ %>
+                        <a href="/category/?page=<%=parseInt(page)-1%>"><button
+                                class="btn btn-primary rounded-circle mx-3">&#8249;</button></a>
+                        <%}%>
+
+                            <p class="d-inline">
+                                <%= foundData.page%>
+                            </p>
+
+
+                            <% if (foundData.next==undefined) {%>
+                                <button disabled class="btn btn-primary rounded-circle mx-3">&#8250;</button>
+                                <%}else{ %>
+
+                                    <a href="/category/?page=<%=(parseInt(page)+1)%>"><button 
+                                            class="btn btn-primary rounded-circle mx-3">&#8250;</button></a>
+                                    <%}%>
+
+
+                                        <% }else{ %>
+                                            <h2 class="my-4">No Category right now</h2>
+                                            <% } %>
+
+
             </div>
+
     </div>
     <%- include("partials/footer") %>
