--- a/views/products.ejs
+++ b/views/products.ejs
@@ -21,10 +21,10 @@
                     <% for(var i=0;i<foundData.results.length;i++){%>
                         <tr>
                             <td>
-                                <%=foundData.results[i].catid%>
+                                <%=foundData.results[i].category._id%>
                             </td>
                             <td>
-                                <%=foundData.results[i].catname%>
+                                <%=foundData.results[i].category.name%>
                             </td>
                             <td>
                                 <%=foundData.results[i]._id%>
